@@ -1,5 +1,13 @@
 2018-10-16  Keith Miller  <keith_miller@apple.com>
 
+        Unreviewed, forgot to add untracked files.
+
+        * llint/LLIntSettingsExtractor.cpp: Added.
+        (main):
+        * offlineasm/generate_settings_extractor.rb: Added.
+
+2018-10-16  Keith Miller  <keith_miller@apple.com>
+
         Unreviewed, reland https://bugs.webkit.org/show_bug.cgi?id=189708 with build fix.
 
         * CMakeLists.txt:
